# FLAG-X

./: .gitignore  .readthedocs.yml  README.md  env_docs.yml  env_github_tests.yml  env_tests.yml  environment.yml  pyproject.toml
.github/workflows/: python-version-badge.yml  tests.yml
docs/: conf.py  env_docs.yml  index.rst  modules.rst  requirements.txt
docs/api/: dimred.rst  gating.rst  io.rst  pipeline.rst
example_configs/: init_train_save_mlp_config.yml  init_train_save_som_config.yml  load_infer_save_mlp_config.yml  load_infer_save_som_config.yml
flagx/: __init__.py  cli.py  pipeline.py
flagx/dimred/: __init__.py
flagx/gating/: __init__.py  fcnn_model.py  mlp_classifier.py  som_classifier.py
flagx/io/: __init__.py  export.py  flowdataloaders.py  flowdatamanager.py  flowdataset.py  io_utils.py
notebooks/: workflow_supervised.ipynb  workflow_unsupervised.ipynb
notebooks/data/flowcyt/: Case_1.csv  Case_10.csv  Case_2.csv  Case_3.csv  Case_4.csv  Case_5.csv  Case_6.csv  Case_7.csv  Case_8.csv  Case_9.csv
notebooks/results/: workflow_supervised_data_split.csv  workflow_supervised_export_feedback.fcs  workflow_supervised_export_feedback_filenames_and_sample_id.csv  workflow_supervised_export_filenames_and_sample_id.csv  workflow_supervised_mlp_classifier.pkl  workflow_supervised_som_classifier.pkl  workflow_unsupervised_export.csv  workflow_unsupervised_export.fcs
notebooks/results/supervised/flowcyt/: workflow_supervised_data_split.csv  workflow_supervised_export.fcs  workflow_supervised_export_feedback.fcs  workflow_supervised_export_feedback_filenames_and_sample_id.csv  workflow_supervised_export_filenames_and_sample_id.csv  workflow_supervised_mlp_classifier.pkl  workflow_supervised_som_classifier.pkl
notebooks/results/unsupervised/flowcyt/: workflow_unsupervised_export.csv  workflow_unsupervised_export.fcs
tests/: conftest.py  test_dummy.py  test_export.py  test_flowdataloaders.py  test_flowdatamanager.py  test_flowdataset.py  test_mlp_classifier.py  test_no_flowio.py  test_no_torch.py  test_pipeline.py  test_som_classifier.py
tests/test_data/: Case_1.csv  Case_1.fcs  Case_2.csv  Case_2.fcs  Case_3.csv  Case_3.fcs  Case_4.csv  Case_4.fcs  Case_5.csv  Case_5.fcs
